llama/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy: { type: Recreate }

  template:
    spec:
      runtimeClassName: nvidia
      containers:
        - name: llama-server
          image: llama-server
          ports:
            - { name: http, containerPort: 8080 }
          volumeMounts:
            - name: models
              mountPath: /models
            - name: credentials
              mountPath: /var/run/secrets/enorme.uk
              readOnly: true
          resources:
            requests: { cpu: 10m, memory: 128Mi, nvidia.com/gpu: 1 }
            limits: { cpu: 2000m, memory: 10Gi, nvidia.com/gpu: 1 }

      volumes:
        - name: models
          persistentVolumeClaim: { claimName: llama-models-pvc }
        - name: credentials
          secret:
            secretName: llama-credentials
            items:
              - { key: API_KEYS, path: api-keys }
