llama/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: llama
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
