llama/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llama
spec:
  ingressClassName: nginx
  rules:
  - host: slop.mon.enorme.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: llama, port: { name: http } }
  tls:
  # use default certificate
  - hosts:
    - '*.mon.enorme.uk'
